[metadata]
name = nimmer
version = 0.0.1
description = Create acronyms from sentences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daneah/nimmer
author = Dane Hillard
license = MIT

[options]
python_requires >=3.10
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*

[tox:tox]
envlist = py310
isolated_build = True

[testenv]
deps =
    pytest>=6.2.0
commands =
    pytest

[testenv:typecheck]
deps =
    mypy==0.910
commands =
    mypy src tests

[testenv:format]
deps =
    black==21.12b0
commands =
    black {posargs:--check --diff .}
